Downgrade the source code to use Java11